# ariadne-capform

./: .env.example  .gitignore  AGENTS.md  README.md  ROLES.md  app.py  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/scripts/: check_intel_pg.py  migrate_intel_from_bulk.py  migrate_intel_from_duckdb.py  reset_intel_prime_only.py  smoke_clew.py  smoke_clew_pg.py  smoke_insights_signoff.py  smoke_intel_analytics.py  smoke_mineru.py  vault_ofm_audit.py  verify_phase16_operator.py  verify_phase16_operator_v2.py
backend/src/thread/: __init__.py  (+3 more)
backend/tests/: conftest.py  test_bulk_migration.py  test_capture_fab.py  test_capture_intent.py  test_capture_lane.py  test_capture_research.py  test_capture_title.py  test_clew_analyze_sql.py  test_clew_charts.py  test_clew_mcp_overlay.py  test_clew_page.py  test_clew_path_link.py  test_clew_saved_traces.py  test_db_migrate.py  test_e2e_smoke.py  test_education_page.py  test_education_promote.py  test_education_studio.py  test_facet_query.py  test_formatters.py  test_graph_trace.py  test_hot_signals.py  test_idea_capturer.py  test_incubator_advanced.py  test_incubator_capture.py  test_ingest_parse_view.py  test_ingest_task_assistant.py  test_insights_chart_attrs.py  test_insights_drilldown.py  test_insights_entity.py  test_insights_expiring.py  test_insights_lenses.py  test_insights_motion.py  test_insights_overview_verdict.py  test_insights_shipley.py  test_insights_signoff_e2e.py  test_insights_slice_explain.py  test_intel_analytics.py  test_intel_echarts_17eg.py  test_intel_echarts_overview.py  (+64 more)
(+370 files in other folders)
